--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -17,19 +17,17 @@
 <resources>
     <string-array name="install_options">
         <item>Backup First</item>
-        <item>Wipe Data</item>
+        <item>Wipe Dalvik</item>
         <item>Wipe Cache</item>
     </string-array>
     
     <string-array name="download_types">
         <item>ROM Downloads</item>
-        <item>Kernel Downloads</item>
-    </string-array>
+        </string-array>
     
     <string-array name="download_types_empty">
         <item>No ROM Downloads</item>
-        <item>No Kernel Downloads</item>
-    </string-array>
+        </string-array>
     
     <string-array name="prokey_ops">
         <item>Buy from Play Store</item>
