--- a/app/src/main/res/values-ru/arrays.xml
+++ b/app/src/main/res/values-ru/arrays.xml
@@ -16,16 +16,16 @@
 
 <resources>
     <string-array name="install_options">
-        <item>Backup First</item>
-        <item>Wipe Dalvik</item>
-        <item>Wipe Cache</item>
+        <item>Бэкап</item>
+        <item>Очистка Dalvik</item>
+        <item>Очистка Cache</item>
     </string-array>
     
     <string-array name="download_types">
-        <item>ROM Downloads</item>
+        <item>Загруженные обновления</item>
         </string-array>
     
     <string-array name="download_types_empty">
-        <item>No ROM Downloads</item>
+        <item>Нет загруженных обновлений</item>
         </string-array>
 </resources>
